objects/SmartvCard__Note__c.object
<CustomObject>
    <fields>
        <fullName>SmartvCard__Account__c</fullName>
        <label>Account</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SmartvCard__Contact__c</fullName>
        <label>Contact</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SmartvCard__Lead__c</fullName>
        <label>Lead</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SmartvCard__User__c</fullName>
        <label>User</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SmartvCard__Validation_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SmartvCard__Validation_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SmartvCard__Validation_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SmartvCard__Validation_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SmartvCard__Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation_Account</label>
        <type>Checkbox</type>
    </fields>
    <label>Note</label>
    <nameField>
        <label>Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SmartvCard__Not_new</fullName>
        <active>true</active>
        <errorConditionFormula>SmartvCard__Validation_Record__c = True</errorConditionFormula>
        <errorMessage>vCard Note record already exists. There can be only one vCard Note Record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SmartvCard__Valid_Field</fullName>
        <active>true</active>
        <errorConditionFormula>SmartvCard__Validation__c =  True</errorConditionFormula>
        <errorMessage>The specified field is not a valid field In the Account Object</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SmartvCard__Validation_User</fullName>
        <active>true</active>
        <errorConditionFormula>SmartvCard__Validation_User__c =True</errorConditionFormula>
        <errorMessage>The specified field is not a valid field In the User Object</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SmartvCard__Validation_contact</fullName>
        <active>true</active>
        <errorConditionFormula>SmartvCard__Validation_Contact__c  = True</errorConditionFormula>
        <errorMessage>The specified field is not a valid field In the Contact Object</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SmartvCard__validation_lead</fullName>
        <active>true</active>
        <errorConditionFormula>SmartvCard__Validation_Lead__c  = True</errorConditionFormula>
        <errorMessage>The specified field is not a valid field In the Lead Object</errorMessage>
    </validationRules>
</CustomObject>